# Sacrifice-Fly-Modeling

./: .Rprofile  .gitignore  .lintr  README.md  pyproject.toml
data/: .~lock.throw_home_runner_on_third_wide_sprint_arm.csv#  on_base_column_names.txt
notebooks/: 1_master.ipynb  eda_arm_strength.ipynb  eda_censoring.ipynb  eda_data_leaks.ipynb  eda_data_uniqueness.ipynb  eda_feature_correlation.ipynb  eda_is_successful.ipynb  eda_model_distance_sacfly.ipynb  eda_model_distance_taggout.ipynb  eda_outfielder_distance_eda.ipynb  eda_sprint_split.ipynb  eda_stadium_diagrams.ipynb  eng_ball_bounce.ipynb  fielder_distance.ipynb  mod_appendix.ipynb  mod_appendix_censored.ipynb  mod_baseline.ipynb  mod_baseline_function.ipynb  mod_baseline_logit_anasyn.ipynb  mod_baseline_logit_smote.ipynb  mod_baseline_randforest_smote.ipynb  mod_censored.ipynb  mod_decision_at_catch.ipynb  mod_isout_xgboost_anasyn.ipynb  mod_isout_xgboost_smote.ipynb
run/R/: get_team_rosters_run.r
run/data_prep/: data_prep_run.py  download_team_rosters.py
src/R/: get_team_rosters.r
src/data_eng/: EDA_Sac_FLY.ipynb  __init__.py  eda_sac_fly.py  fielder_distance.py  game_state_filter.py  runner_time_to_home.py  stadium_grid_plot.py
src/data_prep/: __init__.py  add_player_id_3R.py  create_is_successful.py  download_team_rosters.py  game_state_filter.py  get_sprint_data.py  merge_arm_strength_by_position.py  merge_sprint_by_position.py  pivot_on_fielder.py  prep_arm_strength.py
src/models/: __init__.py  create_model_pipeline.py  pytorch_mlp_runner_out.py
