# Add this section to specify the build system
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sacrifice-fly-modeling"
version = "0.1.0"
description = "Estimate the probability that a runner is thrown out at home when runners are on 2nd and 3rd."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipython>=9.1.0",
    "polars>=1.26.0",
    "pybaseball>=2.2.7",
]
# Add development dependencies here if needed, e.g., for testing or linting
# [project.optional-dependencies]
# dev = ["pytest", "ruff"]

# Add this section to tell setuptools where your package code is
[tool.setuptools.packages.find]
where = ["src"]
